# benchmark-survey

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: experiment.yaml
configs/datasets/: planar.yaml  sbm.yaml
configs/metrics/: classifier.yaml  descriptor.yaml  learned_feature.yaml
configs/models/: construct.yaml  digress.yaml  disco.yaml  edp_gnn.yaml  graphguide.yaml  grum.yaml
latex/: main.tex
scripts/: aggregate_results.py  evaluate_classifier_metrics.py  evaluate_descriptor_metrics.py  evaluate_learned_feature_metrics.py  generate_samples.py  make_latex_tables.py  prepare_data.py  train_model.py
src/empirical_comparison/: cli.py  registry.py
src/empirical_comparison/datasets/: base.py  planar.py  sbm.py  transforms.py
src/empirical_comparison/evaluation/: bootstrap.py  protocol.py  ranking.py  runner.py
src/empirical_comparison/generation/: postprocess.py  sampler.py  validity.py
src/empirical_comparison/metrics/classifier/: dataset.py  features.py  score.py  train.py
src/empirical_comparison/metrics/descriptor/: descriptors.py  mmd.py  wasserstein.py
src/empirical_comparison/metrics/learned_feature/: distance.py  encoder.py  feature_cache.py
src/empirical_comparison/models/: base.py
src/empirical_comparison/models/wrappers/: construct.py  digress.py  disco.py  edp_gnn.py  graphguide.py  grum.py
src/empirical_comparison/reporting/: figures.py  latex.py  tables.py
src/empirical_comparison/utils/: io.py  logging.py  seed.py  stats.py
tests/: test_descriptors.py  test_mmd.py  test_protocol.py  test_registry.py
